--- a/argocd-application-dev.yaml
+++ b/argocd-application-dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: randomquotes-java
+  name: randomquotes-java-svil
   namespace: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
