--- a/applicationset/argocd-applicationset.yaml
+++ b/applicationset/argocd-applicationset.yaml
@@ -26,10 +26,10 @@ spec:
       destination:
         server: '{{url}}'
         namespace: default
-      syncPolicy:
-        syncOptions:
-          - CreateNamespace=true
-        automated:
-          selfHeal: true
-          prune: true
-          allowEmpty: true
+      syncPolicy: {}
+#        syncOptions:
+#          - CreateNamespace=true
+#        automated:
+#          selfHeal: true
+#          prune: true
+#          allowEmpty: true
